--- a/app/src/main/res/layout/fragment_contact_list.xml
+++ b/app/src/main/res/layout/fragment_contact_list.xml
@@ -10,21 +10,22 @@
     <Button
         android:id="@+id/addContactButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:backgroundTint="@color/pastel_blue_dark"
         android:textColor="@android:color/white"
         android:text="Add Contact"
-        android:padding="8dp"
-        android:textSize="18sp"
+        android:background="@drawable/add_contact"
+        android:padding="10dp"
+        android:textSize="16sp"
         android:layout_margin="8dp"/>
 
     <!-- 검색창 -->
     <EditText
         android:id="@+id/search_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:hint="Search Contacts"
         android:layout_marginHorizontal="8dp"
         android:layout_marginBottom="8dp"
