--- a/app/src/main/res/layout/fragment_contact_list.xml
+++ b/app/src/main/res/layout/fragment_contact_list.xml
@@ -18,7 +18,8 @@
         android:text="Add Contact"
         android:padding="8dp"
         android:textSize="18sp"
-        android:layout_margin="8dp"/>
+        android:layout_margin="8dp"
+        android:background="@drawable/search_bar"/>
 
     <!-- 검색창 -->
     <EditText
