--- a/app/src/main/res/layout/fragment_contact_list.xml
+++ b/app/src/main/res/layout/fragment_contact_list.xml
@@ -15,7 +15,7 @@
         <Button
             android:id="@+id/addContactButton"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
             android:backgroundTint="@color/pastel_blue_dark"
@@ -30,7 +30,7 @@
         <EditText
             android:id="@+id/search_bar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:hint="Search Contacts"
             android:layout_marginHorizontal="8dp"
             android:layout_marginBottom="8dp"
