--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".tab1.SplashActivity"
-    android:orientation="vertical"
-    android:layout_gravity="center">
+    android:layout_height="match_parent">
 
+    <!-- ImageView for displaying the GIF -->
     <ImageView
-        android:layout_width="1000dp"
+        android:id="@+id/splashImageView"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_margin="0dp"
-        android:gravity="center"
-        android:src="@drawable/logo" />
-</LinearLayout>
+        android:src="@drawable/splash"
+        android:scaleType="centerCrop" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
