--- a/app/src/main/res/layout/add_archive_popup.xml
+++ b/app/src/main/res/layout/add_archive_popup.xml
@@ -29,7 +29,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:src="@drawable/edit_draw" />
+            android:src="@drawable/edit_draw"
+            />
     </FrameLayout>
 
     <!-- 제목 -->
@@ -112,7 +113,8 @@
             android:text="Edit"
             android:layout_marginEnd="8dp"
             android:backgroundTint="@color/pastel_blue_dark"
-            android:textColor="@android:color/white"/>
+            android:textColor="@android:color/white"
+            android:background="@drawable/search_bar"/>
 
         <Button
             android:id="@+id/buttonDelete"
@@ -122,7 +124,8 @@
             android:layout_margin="8dp"
             android:backgroundTint="@color/red"
             android:textColor="@android:color/white"
-            android:text="delete"/>
+            android:text="delete"
+            android:background="@drawable/search_bar"/>
 
         <Button
             android:id="@+id/closeButton"
@@ -131,7 +134,8 @@
             android:layout_weight="1"
             android:text="Close"
             android:backgroundTint="@color/pastel_blue_darkest"
-            android:textColor="@android:color/white"/>
+            android:textColor="@android:color/white"
+            android:background="@drawable/search_bar"/>
 
     </LinearLayout>
 
