--- a/app/src/main/res/layout/item_schedule_card.xml
+++ b/app/src/main/res/layout/item_schedule_card.xml
@@ -24,13 +24,20 @@
 
         <TextView
             android:id="@+id/tv_schedule_title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="일정 제목"
             android:textSize="16sp"
             android:textStyle="bold"
+            android:layout_weight="1"
             android:textColor="@color/black" />
 
+        <ImageView
+            android:id="@+id/trashIcon"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="8dp"
+            android:src="@drawable/trash" />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
